[package]
name = "covid19-team-json"
version = "0.1.0"
authors = ["Jan Kolena <jendakolena@gmail.com>"]
edition = "2018"

[dependencies]
csv = "~1.1"
err-context = "~0.1"
percent-encoding = "~2.1"
regex = "~1.3"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
walkdir = "~2.3"
webbrowser = "~0.5"
